@startuml

title __UTILISATEURS's Class Diagram__\n

    namespace tilisateurs {
      abstract class utilisateurs.AUtilisateur {
          - biensAchetes : HashMap<IBien, Double>
          - biensSurencheris : HashMap<IBien, Double>
          - nomUtilisateur : String
          + AUtilisateur()
          + consulterBiens()
          + getBiensAchetes()
          + getBiensSurencheris()
          + getNomUtilisateur()
          + surencherir()
      }
    }


    namespace tilisateurs {
      class utilisateurs.Client {
          + Client()
          + consulterFraisGestion()
          + inscrireBien()
      }
    }


    namespace tilisateurs {
      class utilisateurs.Employe {
          + Employe()
          + consulterFraisGestion()
          + inscrireBien()
      }
    }


    namespace tilisateurs {
      class utilisateurs.Responsable {
          + Responsable()
          + consulterFraisGestion()
          + inscrireBien()
      }
    }


  utilisateurs.AUtilisateur .up.|> encheres.interfaces.IUtilisateur
  utilisateurs.Client -up-|> utilisateurs.AUtilisateur
  utilisateurs.Employe -up-|> utilisateurs.AUtilisateur
  utilisateurs.Employe o-- encheres.interfaces.fabriques.IFabriqueBien : fabrique
  utilisateurs.Responsable -up-|> utilisateurs.AUtilisateur


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
